[gd_scene load_steps=6 format=3 uid="uid://d2y2jea8dv066"]

[ext_resource type="Script" path="res://scenes/components/todo_item.gd" id="1_sjjmr"]
[ext_resource type="Material" uid="uid://cbc67egooc2qr" path="res://scenes/custom_windows/tune_icon_color.tres" id="2_q0mg1"]
[ext_resource type="Texture2D" uid="uid://c8m3a63hqhedv" path="res://assets/icons/circle.png" id="3_efqyw"]
[ext_resource type="Texture2D" uid="uid://cjne0ebyuv0b5" path="res://assets/icons/favorite.png" id="4_xba88"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7q0a"]
bg_color = Color(0.439216, 0.52549, 0.8, 0.827451)

[node name="Item" type="PanelContainer"]
offset_right = 168.0
offset_bottom = 28.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q7q0a")
script = ExtResource("1_sjjmr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CheckedButton" type="TextureButton" parent="HBoxContainer"]
material = ExtResource("2_q0mg1")
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
texture_normal = ExtResource("3_efqyw")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "some thing to do"
vertical_alignment = 1

[node name="ImportantButton" type="TextureButton" parent="HBoxContainer"]
material = ExtResource("2_q0mg1")
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
texture_normal = ExtResource("4_xba88")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="HBoxContainer/CheckedButton" to="." method="_on_checked_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ImportantButton" to="." method="_on_important_button_pressed"]
